# CPSC488

./: README.md  pyproject.toml
homework/one/: Dockerfile  evaluate_models.py  gradient_descent.py  least_square.py  main.py  ml-hpc-pod.yml  mlp.py  requirements.txt  test.py  utils.py
homework/three/: embeddings.py  main.py  model.py  train.py
homework/two/phase_1/: 1_collect_data.py  2_calculate_volatility.py  3_estimate_impact_scores.py  4_identify_and_vectorize.py
homework/two/phase_2/: 1_preprocess.py  2_model.py  3_training.py  4_eval.py
homework/two/phase_3/: 1_trading_rules.py  2_trading_sim_eval.py
