[project]
name = "cpsc488"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bs4>=0.0.2",
    "ipython>=8.12.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "typeguard>=4.4.0",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.66",
]
