[project]
name = "cpsc488"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "bs4>=0.0.2",
    "fastparquet>=2024.2.0",
    "gensim>=4.3.3",
    "ipython>=8.12.3",
    "matplotlib>=3.7.5",
    "newspaper3k>=0.2.8",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pandera>=0.22.1",
    "pyarrow>=17.0.0",
    "pytest>=8.3.5",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "typeguard>=4.4.0",
    "wandb>=0.22.3",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.66",
]
